correcciones de links nav

--- a/Html/opiniones.html
+++ b/Html/opiniones.html
@@ -21,19 +21,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portafolio</a>
+              <a class="nav-link" href="./opiniones.html">Portafolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#aboutme">Sobre mi</a>
+              <a class="nav-link" href="./sobremi.html">Sobre mi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#opinion">Opiniones</a>
+              <a class="nav-link" href="#">Opiniones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contacto</a>
+              <a class="nav-link" href="./contactame.html">Contacto</a>
             </li>
           </ul>
         </div>
