--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portfolio">Portafolio</a>
+                <a class="nav-link" href="./Html/portafolio.html">Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#aboutme">Sobre mi</a>
+                <a class="nav-link" href="./Html/sobremi.html">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#opinion">Opiniones</a>
+                <a class="nav-link" href="./Html/opiniones.html">Opiniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Contacto</a>
+                <a class="nav-link" href="./Html/contactame.html">Contacto</a>
               </li>
             </ul>
           </div>
