--- a/Html/sobremi.html
+++ b/Html/sobremi.html
@@ -22,19 +22,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#portfolio">Portafolio</a>
+                <a class="nav-link" href="./portafolio.html">Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#aboutme">Sobre mi</a>
+                <a class="nav-link" href="#">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#opinion">Opiniones</a>
+                <a class="nav-link" href="./opiniones.html">Opiniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Contacto</a>
+                <a class="nav-link" href="./contactame.html">Contacto</a>
               </li>
             </ul>
           </div>
