--- a/index.html
+++ b/index.html
@@ -4,31 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernan Coceres</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <header class="header">
-      <nav class="navbar">
-        <p class="logo">Hernan Coceres</p>
-        <ul class="navbar_list">
-          <li class="navlist_item"><a href="#">Inicio</a></li>
-          <li class="navlist_item">
-            <a href="./Html/portafolio.html">Portafolio</a>
-          </li>
-          <li class="navlist_item">
-            <a href="./Html/sobremi.html">Sobre mi</a>
-          </li>
-          <li class="navlist_item">
-            <a href="./Html/opiniones.html">Opiniones</a>
-          </li>
-          <li class="navlist_item">
-            <a href="./Html/contactame.html">Contactame</a>
-          </li>
-        </ul>
-      </nav>
+      <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
+        <div class="container-fluid lr">
+          <a class="navbar-brand" href="#">Hernan Coceres</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Html/portafolio.html">Portafolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Html/sobremi.html">Sobre mi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Html/opiniones.html">Opiniones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Html/contactame.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
     </header>
     <!-- Comienza el inicio -->
     <main class="content_index">
@@ -55,9 +64,6 @@
       <p class="copyright">&#169; 2024 Hernan Coceres</p>
       <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
-<<<<<<< HEAD
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-=======
->>>>>>> 1295be449131fbbbb7cf0864e1a157e11470277b
   </body>
 </html>
