correccion de errores

--- a/Html/sobremi.html
+++ b/Html/sobremi.html
@@ -45,7 +45,7 @@
       <section class="presentation_aboutme">
         <div class="div_presentation"><img
           class="photo_aboutme"
-          src="../Imagenes/Imagenes sobre mi/Foto.jpg"></div>
+          src="../imagenes/imagenessobremi/Foto.jpg"></div>
         <div class="div_presentation">
           <h3 class="subtitle subtitle_aboutme golden_letter">Actualidad</h3>
           <p class="text_presentation">
@@ -61,29 +61,29 @@
               <h4 class="title_skills">Habilidades</h4>
               <img
                 class="img_skills"
-                src="../Imagenes/Imagenes sobre mi/Iconos habilidades/iconohtml.png"
+                src="../imagenes/imagenessobremi/iconohabilidades/iconohtml.png"
                 alt="icono de html"
               />
               <img
                 class="img_skills"
-                src="../Imagenes/Imagenes sobre mi/Iconos habilidades/iconosql.png"
+                src="../imagenes/imagenessobremi/iconoshabilidades/iconosql.png"
                 alt="icono de sql"
               />
               <img
                 class="img_skills"
-                src="../Imagenes/Imagenes sobre mi/Iconos habilidades/iconocss.png"
+                src="../imagenes/imagenessobremi/iconoshabilidades/iconocss.png"
                 alt="icono de css"
               />
             </div>
             <h4 class="title_skills">Especializado en</h4>
             <img
               class="img_skills"
-              src="../Imagenes/Imagenes sobre mi/Iconos habilidades/iconopython.png"
+              src="../imagenes/imagenessobremi/iconoshabilidades/iconopython.png"
               alt="icono de python"
             />
             <img
               class="img_skills"
-              src="../Imagenes/Imagenes sobre mi/Iconos habilidades/iconojs.png"
+              src="../imagenes/imagenessobremi/iconoshabilidades/iconojs.png"
               alt="icono de javascript"
             />
           </div>
@@ -96,7 +96,7 @@
             <li class="item_experience">
               <img
                 class="img_expwork"
-                src="../Imagenes/Imagenes sobre mi/imagnes exp laboral/experiencialaboral1.png"
+                src="../imagenes/imagenessobremi/imgexplaboral/experiencialaboral1.png"
                 alt="imagen experiencia laboral"
               />
               <div>
@@ -108,7 +108,7 @@
             <li class="item_experience">
               <img
                 class="img_expwork"
-                src="../Imagenes/Imagenes sobre mi/imagnes exp laboral/experiencialaboral2.png"
+                src="../imagenes/imagenessobremi/imgexplaboral/experiencialaboral2.png"
                 alt="imagen experiencia laboral"
               />
               <div>
@@ -124,9 +124,6 @@
       <p class="copyright">&#169; 2024 Hernan Coceres</p>
       <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
-<<<<<<< HEAD
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-=======
->>>>>>> 1295be449131fbbbb7cf0864e1a157e11470277b
   </body>
 </html>
