--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Html/portafolio.html">Portafolio</a>
+                <a class="nav-link" href="./html/portafolio.html">Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Html/sobremi.html">Sobre mi</a>
+                <a class="nav-link" href="./html/sobremi.html">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Html/opiniones.html">Opiniones</a>
+                <a class="nav-link" href="./html/opiniones.html">Opiniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Html/contactame.html">Contacto</a>
+                <a class="nav-link" href="./html/contactame.html">Contacto</a>
               </li>
             </ul>
           </div>
@@ -44,7 +44,7 @@
       <h1 class="name_index title_principal">Hernan Coceres</h1>
       <h2 class="subtitle subtitle_index golden_letter">Desarollador Frontend</h2>
       <section class="first_content--index">
-      <div class="content_img--index"><img class="photo_index" src="./Imagenes/Imagenes index/fotoretrato.jpg" /></div>
+      <div class="content_img--index"><img class="photo_index" src="./imagenes/imagenesindex/fotoretrato.jpg" /></div>
       <div class="content_p--index">
         <p class="paragraph_index">
         Mi nombre es Hernan y actualmente me encuentro
@@ -53,10 +53,10 @@
       </p>
       <section class="section_contact--index">
         <ul class="contact_index">
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./Imagenes/Imagenes index/Iconos index/iconolinkedin.png" alt="icono de likedin"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./Imagenes/Imagenes index/Iconos index/iconooutlook.png" alt="icono de outlook"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./Imagenes/Imagenes index/Iconos index/iconox.png" alt="icono de x"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./Imagenes/Imagenes index/Iconos index/iconogit.png" alt="icono de likedin"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de likedin"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de likedin"></a></li>
         </ul>
       </section>
     </section></div>
