--- a/Html/opiniones.html
+++ b/Html/opiniones.html
@@ -44,20 +44,20 @@
         <p class="text_opinion">Estas son algunas de las opiniones sobre mi trabajo</p>
         <section class="section_opinion">
             <article class="article_opinion">
-                <img class="photo_opinion" src="../Imagenes/Imagenes opiniones/foto_opinion.png" alt="foto">
+                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
                 <div class="div_opinion">
                     <h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
                     <p class="opinion">"opinion"</p></div>
             </article>
             <article class="article_opinion article_opinion2">
-                <img class="photo_opinion" src="../Imagenes/Imagenes opiniones/foto_opinion.png" alt="foto">
+                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
                 <div class="div_opinion"><h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
                     <p class="opinion">"opinion"</p></div>
             </article>
             <article class="article_opinion">
-                <img class="photo_opinion" src="../Imagenes/Imagenes opiniones/foto_opinion.png" alt="foto">
+                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
                 <div class="div_opinion">
                     <h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
@@ -69,9 +69,6 @@
         <p class="copyright">&#169; 2024 Hernan Coceres</p>
         <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
       </footer>
-<<<<<<< HEAD
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-=======
->>>>>>> 1295be449131fbbbb7cf0864e1a157e11470277b
 </body>
 </html>
