--- a/Html/portafolio.html
+++ b/Html/portafolio.html
@@ -46,7 +46,7 @@
         <article class="article_portfolio">
             <img
               class="image_portfolio"
-              src="../Imagenes/Imagenes portafolio/Proyecto1.jpg"
+              src="../imagenes/imagenesportafolio/Proyecto1.jpg"
             />
             <h3 class="subtitle">Proyecto 1</h3>
             <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
@@ -55,7 +55,7 @@
           <article class="article_portfolio">
             <img
               class="image_portfolio"
-              src="../Imagenes/Imagenes portafolio/Proyecto2.jpg"
+              src="../imagenes/imagenesportafolio/Proyecto2.jpg"
             />
             <h3 class="subtitle">Proyecto 2</h3>
             <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
@@ -64,7 +64,7 @@
         <article class="article_portfolio">
           <img
             class="image_portfolio"
-            src="../Imagenes/Imagenes portafolio/Proyecto3.jpg"
+            src="../imagenes/imagenesportafolio/Proyecto3.jpg"
           />
           <h3 class="subtitle">Proyecto 3</h3>
           <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
@@ -76,8 +76,5 @@
       <p class="copyright">&#169; 2024 Hernan Coceres</p>
       <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
-<<<<<<< HEAD
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-=======
->>>>>>> 1295be449131fbbbb7cf0864e1a157e11470277b
   </body>
