correccion de links

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -25,16 +25,16 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./portafolio.html">Portafolio</a>
+                <a class="nav-link" href="./portfolio.html">Portafolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./opiniones.html">Opiniones</a>
+                <a class="nav-link" href="./opinion.html">Opiniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contactame.html">Contacto</a>
+                <a class="nav-link" href="./contact.html">Contacto</a>
               </li>
             </ul>
           </div>
