--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -24,13 +24,13 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./portafolio.html">Portafolio</a>
+                <a class="nav-link" href="./portfolio.html">Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./sobremi.html">Sobre mi</a>
+                <a class="nav-link" href="./aboutme.html">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./opiniones.html">Opiniones</a>
+                <a class="nav-link" href="./opinion.html">Opiniones</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contacto</a>
