--- a/HTML/opinion.html
+++ b/HTML/opinion.html
@@ -24,16 +24,16 @@
               <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./opiniones.html">Portafolio</a>
+              <a class="nav-link" href="./portfolio.html">Portafolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./sobremi.html">Sobre mi</a>
+              <a class="nav-link" href="./aboutme.html">Sobre mi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Opiniones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contactame.html">Contacto</a>
+              <a class="nav-link" href="./contact.html">Contacto</a>
             </li>
           </ul>
         </div>
