--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -27,13 +27,13 @@
                 <a class="nav-link" href="#">Portafolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./sobremi.html">Sobre mi</a>
+                <a class="nav-link" href="./aboutme.html">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./opiniones.html">Opiniones</a>
+                <a class="nav-link" href="./opinion.html">Opiniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contactame.html">Contacto</a>
+                <a class="nav-link" href="./contact.html">Contacto</a>
               </li>
             </ul>
           </div>
