correccion de iconos rotos

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -55,10 +55,10 @@
         <section class="section_networks">
           <div class="div_section--networks"><p class="sub_subtitle text_contact">Tambien podes encontrarme en</p>
             <ul class="contact_index">
-            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../Imagenes/Imagenes index/Iconos index/iconolinkedin.png" alt="icono de likedin"></a></li>
-            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../Imagenes/Imagenes index/Iconos index/iconooutlook.png" alt="icono de outlook"></a></li>
-            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../Imagenes/Imagenes index/Iconos index/iconox.png" alt="icono de x"></a></li>
-            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../Imagenes/Imagenes index/Iconos index/iconogit.png" alt="icono de likedin"></a></li>
+            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de likedin"></a></li>
+            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
             </ul></div>
         </section></div>
       </main>
