--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernan Coceres</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +45,7 @@
     </header>
     <!-- Comienza el inicio -->
     <main class="content_index">
-      <h1 class="name_index title_principal">Hernan Coceres</h1>
+      <h1 class="name_index title_principal animate__zoomInDown">Hernan Coceres</h1>
       <h2 class="subtitle subtitle_index golden_letter">Desarollador Frontend</h2>
       <section class="first_content--index">
       <div class="content_img--index"><img class="photo_index" src="./imagenes/imagenesindex/fotoretrato.jpg" /></div>
