Agrego animaciones con animate.css

--- a/HTML/opinion.html
+++ b/HTML/opinion.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hernan Coceres</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,23 +44,23 @@
       </div>
   </header>
     <main class="content_opinion">
-        <h2 id="opinion" class="title_noindex title_principal">Opiniones</h2>
-        <p class="text_opinion">Estas son algunas de las opiniones sobre mi trabajo</p>
+        <h2 id="opinion" class="title_noindex title_principal animate__animated animate__fadeInLeft">Opiniones</h2>
+        <p class="text_opinion animate__animated animate__flipInX animate__delay-1s">Estas son algunas de las opiniones sobre mi trabajo</p>
         <section class="section_opinion">
-            <article class="article_opinion">
+            <article class="article_opinion animate__animated animate__fadeInRight animate__delay-2s">
                 <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
                 <div class="div_opinion">
                     <h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
                     <p class="opinion">"opinion"</p></div>
             </article>
-            <article class="article_opinion article_opinion2">
+            <article class="article_opinion article_opinion2 animate__animated animate__fadeInRight animate__delay-3s">
                 <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
                 <div class="div_opinion"><h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
                     <p class="opinion">"opinion"</p></div>
             </article>
-            <article class="article_opinion">
+            <article class="article_opinion animate__animated animate__fadeInRight animate__delay-4s">
                 <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
                 <div class="div_opinion">
                     <h4 class="name_opinion">Nombre Apellido</h4>
