--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernan Coceres</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,8 +45,8 @@
     </header>
     <!--De momento le pongo una clase distinta a todos los main de los html, quizas mas adelante me conviene utilizar la misma clase para todos-->
     <main class="content_portfolio">
-      <h2 id="portfolio" class="title_noindex title_principal">Portafolio</h2>
-      <section class="section_portfolio">
+      <h2 id="portfolio" class="title_noindex title_principal animate__animated animate__fadeInLeft">Portafolio</h2>
+      <section class="section_portfolio animate__animated animate__fadeInUp animate__delay-1s">
         <article class="article_portfolio">
             <img
               class="image_portfolio"
