--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernan Coceres</title>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,8 +43,8 @@
         </div>
     </header>
     <main class="content_aboutme">
-      <h2 id="aboutme" class="title_noindex title_principal">Sobre mi</h2>
-      <section class="presentation_aboutme">
+      <h2 id="aboutme" class="title_noindex title_principal animate__animated animate__fadeInLeft">Sobre mi</h2>
+      <section class="presentation_aboutme animate__animated animate__fadeInUp animate__delay-1s">
         <div class="div_presentation"><img
           class="photo_aboutme"
           src="../imagenes/imagenessobremi/Foto.jpg"></div>
