--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hernan Coceres</title>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,9 +44,9 @@
         </div>
     </header>
       <main class="main_contact">
-        <h2 id="contact" class="title_noindex title_principal">Contactame</h2>
+        <h2 id="contact" class="title_noindex title_principal animate__animated animate__fadeInLeft">Contactame</h2>
         <div class="contain_contact">
-          <section class="section_form">
+          <section class="section_form animate__animated animate__fadeInUp animate__delay-1s">
           <form class="form_contact">
             <h3 class="sub_subtitle text_form">Deja tus datos para poder contactarme</h3>
               <div class="div_input"><input class="input_form" type="text" placeholder="Tu nombre" /></div>
@@ -52,7 +56,7 @@
               <div class="div_input"><button class="button_send">Enviar</button></div>
           </form>
         </section>
-        <section class="section_networks">
+        <section class="section_networks animate__animated animate__flipInX animate__delay-2s">
           <div class="div_section--networks"><p class="sub_subtitle text_contact">Tambien podes encontrarme en</p>
             <ul class="contact_index">
             <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de likedin"></a></li>
@@ -67,9 +71,6 @@
       <p class="copyright">&#169; 2024 Hernan Coceres</p>
       <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
     </footer>
-<<<<<<< HEAD
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-=======
->>>>>>> 1295be449131fbbbb7cf0864e1a157e11470277b
   </body>
 </html>
