--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </header>
     <!-- Comienza el inicio -->
     <main class="content_index">
-      <h1 class="name_index title_principal animate__zoomInDown">Hernan Coceres</h1>
-      <h2 class="subtitle subtitle_index golden_letter">Desarollador Frontend</h2>
-      <section class="first_content--index">
+      <h1 class="name_index title_principal animate__animated animate__zoomInDown">Hernan Coceres</h1>
+      <h2 class="subtitle subtitle_index golden_letter animate__animated animate__flipInX animate__delay-1s">Desarollador Frontend</h2>
+      <section class="first_content--index animate__animated animate__fadeInUp animate__delay-2s">
       <div class="content_img--index"><img class="photo_index" src="./imagenes/imagenesindex/fotoretrato.jpg" /></div>
       <div class="content_p--index">
         <p class="paragraph_index">
