correccion de css enlazado con scss

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
+      <nav class="navbar navbar-expand-lg border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid lr">
           <a class="navbar-brand" href="#">Hernan Coceres</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
         </div>
     </header>
     <!-- Comienza el inicio -->
-    <main id="main" class="content_index">
+    <main class="content_index">
       <h1 class="name_index title_principal animate__animated animate__zoomInDown">Hernan Coceres</h1>
       <h2 class="subtitle subtitle_index golden_letter animate__animated animate__flipInX animate__delay-1s">Desarollador Frontend</h2>
       <section class="first_content--index animate__animated animate__fadeInUp animate__delay-2s">
