agrego animacion en aboutme

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -92,8 +92,8 @@
           </div>
         </article>
       </section>
-      <div class="div_title--experience"><h4 class="subtitle">Experiencia laboral</h4></div>
-        <section class="experience_work">
+      <div class="div_title--experience"><h4 class="subtitle animate__animated animate__fadeInLeft">Experiencia laboral</h4></div>
+        <section class="experience_work animate__animated animate__fadeInRight animate__delay-2s">
           <ul class="list_experience">
             <li class="item_experience">
               <img
