Correcion de alts en imagenes, y agrego link en logo

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid lr">
-          <a class="navbar-brand" href="#">Hernan Coceres</a>
+          <a class="navbar-brand" href="../index.html">Hernan Coceres</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,9 +45,9 @@
     <main class="content_aboutme">
       <h2 id="aboutme" class="title_noindex title_principal animate__animated animate__fadeInLeft">Sobre mi</h2>
       <section class="presentation_aboutme animate__animated animate__fadeInUp animate__delay-1s">
-        <div class="div_presentation"><img
-          class="photo_aboutme"
-          src="../imagenes/imagenessobremi/Foto.jpg"></div>
+        <div class="div_presentation">
+          <img class="photo_aboutme" src="../imagenes/imagenessobremi/Foto.jpg" alt="foto retrato de hernan">
+        </div>
         <div class="div_presentation">
           <h3 class="subtitle subtitle_aboutme golden_letter">Actualidad</h3>
           <p class="text_presentation">
@@ -60,34 +60,14 @@
           </p>
             <div class="skills">
               <h4 class="title_skills">Habilidades</h4>
-              <img
-                class="img_skills"
-                src="../imagenes/imagenessobremi/iconohabilidades/iconohtml.png"
-                alt="icono de html"
-              />
-              <img
-                class="img_skills"
-                src="../imagenes/imagenessobremi/iconohabilidades/iconosql.png"
-                alt="icono de sql"
-              />
-              <img
-                class="img_skills"
-                src="../imagenes/imagenessobremi/iconohabilidades/iconocss.png"
-                alt="icono de css"
-              />
+              <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconohtml.png" alt="icono de html"/>
+              <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconosql.png" alt="icono de sql"/>
+              <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconocss.png" alt="icono de css"/>
             </div>
             <div class="skills">
               <h4 class="title_skills">Especializado en</h4>
-            <img
-              class="img_skills"
-              src="../imagenes/imagenessobremi/iconohabilidades/iconopython.png"
-              alt="icono de python"
-            />
-            <img
-              class="img_skills"
-              src="../imagenes/imagenessobremi/iconohabilidades/iconojs.png"
-              alt="icono de javascript"
-            />
+              <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconopython.png" alt="icono de python"/>
+              <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconojs.png" alt="icono de javascript"/>
             </div>
           </div>
         </article>
@@ -96,11 +76,7 @@
         <section class="experience_work animate__animated animate__fadeInRight animate__delay-2s">
           <ul class="list_experience">
             <li class="item_experience">
-              <img
-                class="img_expwork"
-                src="../imagenes/imagenessobremi/imgexplaboral/experiencialaboral1.png"
-                alt="imagen experiencia laboral"
-              />
+              <img class="img_expwork" src="../imagenes/imagenessobremi/imgexplaboral/experiencialaboral1.png" alt="imagen experiencia laboral"/>
               <div>
                 <h5 class="sub_subtitle">Nombre empresa</h5>
                 <h6 class="description_expwork golden_letter">Nombre descriptivo del puesto</h6>
@@ -108,11 +84,7 @@
               </div>
             </li>
             <li class="item_experience">
-              <img
-                class="img_expwork"
-                src="../imagenes/imagenessobremi/imgexplaboral/experiencialaboral2.png"
-                alt="imagen experiencia laboral"
-              />
+              <img class="img_expwork" src="../imagenes/imagenessobremi/imgexplaboral/experiencialaboral2.png" alt="imagen experiencia laboral"/>
               <div>
                 <h5 class="sub_subtitle">Nombre empresa</h5>
                 <h6 class="description_expwork golden_letter">Nombre descriptivo del puesto</h6>
