--- a/HTML/opinion.html
+++ b/HTML/opinion.html
@@ -15,7 +15,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid lr">
-        <a class="navbar-brand" href="#">Hernan Coceres</a>
+        <a class="navbar-brand" href="../index.html">Hernan Coceres</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,20 +45,20 @@
         <p class="text_opinion animate__animated animate__flipInX animate__delay-1s">Estas son algunas de las opiniones sobre mi trabajo</p>
         <section class="section_opinion">
             <article class="article_opinion animate__animated animate__fadeInRight animate__delay-2s">
-                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
+                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto de quien opina">
                 <div class="div_opinion">
                     <h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
                     <p class="opinion">"opinion"</p></div>
             </article>
             <article class="article_opinion article_opinion2 animate__animated animate__fadeInRight animate__delay-3s">
-                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
+                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto de quien opina">
                 <div class="div_opinion"><h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
                     <p class="opinion">"opinion"</p></div>
             </article>
             <article class="article_opinion animate__animated animate__fadeInRight animate__delay-4s">
-                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto">
+                <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto de quien opina">
                 <div class="div_opinion">
                     <h4 class="name_opinion">Nombre Apellido</h4>
                     <h5 class="description_expwork golden_letter">Empresa</h5>
