--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -15,7 +15,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid lr">
-          <a class="navbar-brand" href="#">Hernan Coceres</a>
+          <a class="navbar-brand" href="../index.html">Hernan Coceres</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -45,28 +45,19 @@
       <h2 id="portfolio" class="title_noindex title_principal animate__animated animate__fadeInLeft">Portafolio</h2>
       <section class="section_portfolio animate__animated animate__fadeInUp animate__delay-1s">
         <article class="article_portfolio">
-            <img
-              class="image_portfolio"
-              src="../imagenes/imagenesportafolio/Proyecto1.jpg"
-            />
+            <img class="image_portfolio" src="../imagenes/imagenesportafolio/Proyecto1.jpg" alt="imagen del proyecto 1"/>
             <h3 class="subtitle">Proyecto 1</h3>
             <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
             <p class="description_proyect">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere corporis architecto, excepturi sapiente, iste ea animi adipisci quas unde ipsam consequuntur praesentium quisquam optio repellendus recusandae ratione explicabo ex maxime?</p>
           </article>
           <article class="article_portfolio">
-            <img
-              class="image_portfolio"
-              src="../imagenes/imagenesportafolio/Proyecto2.jpg"
-            />
+            <img class="image_portfolio" src="../imagenes/imagenesportafolio/Proyecto2.jpg" alt="imagen del proyecto 2"/>
             <h3 class="subtitle">Proyecto 2</h3>
             <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
             <p class="description_proyect">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere corporis architecto, excepturi sapiente, iste ea animi adipisci quas unde ipsam consequuntur praesentium quisquam optio repellendus recusandae ratione explicabo ex maxime?</p>
           </article>
         <article class="article_portfolio">
-          <img
-            class="image_portfolio"
-            src="../imagenes/imagenesportafolio/Proyecto3.jpg"
-          />
+          <img class="image_portfolio" src="../imagenes/imagenesportafolio/Proyecto3.jpg" alt="imagen del proyecto 3"/>
           <h3 class="subtitle">Proyecto 3</h3>
           <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
           <p class="description_proyect">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere corporis architecto, excepturi sapiente, iste ea animi adipisci quas unde ipsam consequuntur praesentium quisquam optio repellendus recusandae ratione explicabo ex maxime?</p>
