--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -15,7 +15,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid lr">
-          <a class="navbar-brand" href="#">Hernan Coceres</a>
+          <a class="navbar-brand" href="../index.html">Hernan Coceres</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,9 +54,9 @@
           </form>
         </section>
         <section class="section_networks animate__animated animate__flipInX animate__delay-2s">
-          <div class="div_section--networks"><p class="sub_subtitle text_contact">Tambien podes encontrarme en</p>
+          <div class="div_section--networks"><p class="sub_subtitle text_contact">También podes encontrarme en</p>
             <ul class="contact_index">
-            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de likedin"></a></li>
+            <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
             <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
             <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
             <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
