--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 class="name_index title_principal animate__animated animate__zoomInDown">Hernan Coceres</h1>
       <h2 class="subtitle subtitle_index golden_letter animate__animated animate__flipInX animate__delay-1s">Desarollador Frontend</h2>
       <section class="first_content--index animate__animated animate__fadeInUp animate__delay-2s">
-      <div class="content_img--index"><img class="photo_index" src="./imagenes/imagenesindex/fotoretrato.jpg" /></div>
+      <div class="content_img--index"><img class="photo_index" src="./imagenes/imagenesindex/fotoretrato.jpg" alt="foto retrato de Hernan"/></div>
       <div class="content_p--index">
         <p class="paragraph_index">
         Mi nombre es Hernan y actualmente me encuentro
@@ -54,10 +54,10 @@
       </p>
       <section class="section_contact--index">
         <ul class="contact_index">
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de likedin"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
           <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
           <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
-          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de likedin"></a></li>
+          <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
         </ul>
       </section>
     </section></div>
