Agrego imagen marca

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar border-bottom border-body" data-bs-theme="dark">
         <div class="container-fluid lr">
-          <a class="navbar-brand" href="../index.html">Hernan Coceres</a>
+          <a class="navbar-brand" href="../index.html"><img class="logo" src="../imagenes/imagenlogo/fav.png" alt="logo hernan coceres"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -54,8 +54,9 @@
               <div class="div_input"><button class="button_send">Enviar</button></div>
           </form>
         </section>
-        <section class="section_networks animate__animated animate__flipInX animate__delay-2s">
-          <div class="div_section--networks"><p class="sub_subtitle text_contact">También podes encontrarme en</p>
+        <section class="section_networks">
+          <img src="../imagenes/imagenmarca/hcwhite.png" alt="imagen marca hernan coceres">
+          <div class="div_section--networks animate__animated animate__flipInX animate__delay-2s"><p class="sub_subtitle text_contact">También podes encontrarme en</p>
             <ul class="contact_index">
             <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
             <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
