Mejora de footer y actualizacion de portafolio

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -43,13 +43,13 @@
         </div>
     </header>
     <main class="content_aboutme">
-      <h2 id="aboutme" class="title_noindex title_principal animate__animated animate__fadeInLeft">Sobre mi</h2>
+      <h1 id="aboutme" class="title_noindex title_principal animate__animated animate__fadeInLeft">Sobre mi</h1>
       <section class="presentation_aboutme animate__animated animate__fadeInUp animate__delay-1s">
         <div class="div_presentation">
           <img class="photo_aboutme" src="../imagenes/imagenessobremi/Foto.jpg" alt="foto retrato de hernan">
         </div>
         <div class="div_presentation">
-          <h3 class="subtitle subtitle_aboutme golden_letter">Actualidad</h3>
+          <h2 class="subtitle subtitle_aboutme golden_letter">Actualidad</h2>
           <p class="text_presentation">
             Me encuentro capacitandome en desarrollo web, mi meta es
             poder desarrollar webs con alto nivel visual, que brinden buena
@@ -59,13 +59,13 @@
             increibles!
           </p>
             <div class="skills">
-              <h4 class="title_skills">Habilidades</h4>
+              <h3 class="title_skills">Habilidades</h3>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconohtml.png" alt="icono de html"/>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconosql.png" alt="icono de sql"/>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconocss.png" alt="icono de css"/>
             </div>
             <div class="skills">
-              <h4 class="title_skills">Especializado en</h4>
+              <h3 class="title_skills">Especializado en</h3>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconopython.png" alt="icono de python"/>
               <img class="img_skills" src="../imagenes/imagenessobremi/iconohabilidades/iconojs.png" alt="icono de javascript"/>
             </div>
@@ -95,8 +95,17 @@
       </section>
     </main>
     <footer>
-      <p class="copyright">&#169; 2024 Hernan Coceres</p>
-      <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      <img class="logo" src="../imagenes/imagenlogo/fav.png" alt="logo hernan coceres">
+      <div>
+        <p class="copyright">&#169; 2024 Hernan Coceres</p>
+        <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      </div>
+        <ul class="contact_index">
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
