--- a/HTML/opinion.html
+++ b/HTML/opinion.html
@@ -42,35 +42,45 @@
       </div>
   </header>
     <main class="content_opinion">
-        <h2 id="opinion" class="title_noindex title_principal animate__animated animate__fadeInLeft">Opiniones</h2>
+        <h1 id="opinion" class="title_noindex title_principal animate__animated animate__fadeInLeft">Opiniones</h1>
         <p class="text_opinion animate__animated animate__flipInX animate__delay-1s">Estas son algunas de las opiniones sobre mi trabajo</p>
         <section class="section_opinion">
             <article class="article_opinion animate__animated animate__fadeInRight animate__delay-2s">
                 <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto de quien opina">
                 <div class="div_opinion">
-                    <h4 class="name_opinion">Nombre Apellido</h4>
-                    <h5 class="description_expwork golden_letter">Empresa</h5>
+                    <h2 class="name_opinion">Nombre Apellido</h2>
+                    <h3 class="description_expwork golden_letter">Empresa</h3>
                     <p class="opinion">"opinion"</p></div>
             </article>
             <article class="article_opinion article_opinion2 animate__animated animate__fadeInRight animate__delay-3s">
                 <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto de quien opina">
-                <div class="div_opinion"><h4 class="name_opinion">Nombre Apellido</h4>
-                    <h5 class="description_expwork golden_letter">Empresa</h5>
+                <div class="div_opinion">
+                    <h2 class="name_opinion">Nombre Apellido</h2>
+                    <h3 class="description_expwork golden_letter">Empresa</h3>
                     <p class="opinion">"opinion"</p></div>
             </article>
             <article class="article_opinion animate__animated animate__fadeInRight animate__delay-4s">
                 <img class="photo_opinion" src="../imagenes/imagenesopiniones/foto_opinion.png" alt="foto de quien opina">
                 <div class="div_opinion">
-                    <h4 class="name_opinion">Nombre Apellido</h4>
-                    <h5 class="description_expwork golden_letter">Empresa</h5>
+                    <h2 class="name_opinion">Nombre Apellido</h2>
+                    <h3 class="description_expwork golden_letter">Empresa</h3>
                     <p class="opinion">"opinion"</p>
                 </div>
             </article>
     </main>
     <footer>
+      <img class="logo" src="../imagenes/imagenlogo/fav.png" alt="logo hernan coceres">
+      <div>
         <p class="copyright">&#169; 2024 Hernan Coceres</p>
         <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
-      </footer>
+      </div>
+        <ul class="contact_index">
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+        </ul>
+    </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
