--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -42,16 +42,16 @@
         </div>
     </header>
       <main class="main_contact">
-        <h2 id="contact" class="title_noindex title_principal animate__animated animate__fadeInLeft">Contactame</h2>
+        <h1 id="contact" class="title_noindex title_principal animate__animated animate__fadeInLeft">Contactame</h1>
         <div class="contain_contact">
           <section class="section_form animate__animated animate__fadeInUp animate__delay-1s">
           <form class="form_contact">
-            <h3 class="sub_subtitle text_form">Deja tus datos para poder contactarme</h3>
-              <div class="div_input"><input class="input_form" type="text" placeholder="Tu nombre" /></div>
-              <div class="div_input"><input class="input_form" type="email" placeholder="Tu correo" /></div>
-              <div class="div_input"><input class="input_form" type="text" placeholder="Asunto" /></div>
-              <div class="div_input"><textarea class="input_form" cols="30" rows="10" placeholder="Deja tu mensaje aquí..."></textarea></div>
-              <div class="div_input"><button class="button_send">Enviar</button></div>
+            <h2 class="sub_subtitle text_form">Deja tus datos para poder contactarme</h2>
+              <div class="div_input"><input class="input_form" type="text" placeholder="Tu nombre" required/></div>
+              <div class="div_input"><input class="input_form" type="email"  placeholder="Tu correo" required/></div>
+              <div class="div_input"><input class="input_form" type="text" placeholder="Asunto" required/></div>
+              <div class="div_input"><textarea class="input_form" cols="30" rows="10" placeholder="Deja tu mensaje aquí..." required></textarea></div>
+              <div class="div_input"><button class="button_send" type="submit">Enviar</button></div>
           </form>
         </section>
         <section class="section_networks">
@@ -67,8 +67,17 @@
       </main>
     </header>
     <footer>
-      <p class="copyright">&#169; 2024 Hernan Coceres</p>
-      <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      <img class="logo" src="../imagenes/imagenlogo/fav.png" alt="logo hernan coceres">
+      <div>
+        <p class="copyright">&#169; 2024 Hernan Coceres</p>
+        <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      </div>
+        <ul class="contact_index">
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
