--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -43,31 +43,40 @@
     </header>
     <!--De momento le pongo una clase distinta a todos los main de los html, quizas mas adelante me conviene utilizar la misma clase para todos-->
     <main class="content_portfolio">
-      <h2 id="portfolio" class="title_noindex title_principal animate__animated animate__fadeInLeft">Portafolio</h2>
+      <h1 id="portfolio" class="title_noindex title_principal animate__animated animate__fadeInLeft">Portafolio</h1>
       <section class="section_portfolio animate__animated animate__fadeInUp animate__delay-1s">
         <article class="article_portfolio">
-            <img class="image_portfolio" src="../imagenes/imagenesportafolio/Proyecto1.jpg" alt="imagen del proyecto 1"/>
-            <h3 class="subtitle">Proyecto 1</h3>
-            <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
-            <p class="description_proyect">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere corporis architecto, excepturi sapiente, iste ea animi adipisci quas unde ipsam consequuntur praesentium quisquam optio repellendus recusandae ratione explicabo ex maxime?</p>
+            <img class="image_hc" src="../imagenes/imagenmarca/hcwhite.png" alt="imagen del proyecto 1"/>
+            <h2 class="subtitle">Mi web</h2>
+            <h3 class="sub_subtitle golden_letter">Portafolio</h3>
+            <p class="description_proyect">En este proyecto, desarrolle mi propia web en donde puedo mostrar mis trabajos, mis capacidades y objetivos como desarrollador. Para tener mejor visibilidad de todos los proyectos y soluciones que puedo crear en mi carrera. <br> Con mi web ofresco un lugar en donde pueden conocerme y también contactarme.</p>
           </article>
           <article class="article_portfolio">
             <img class="image_portfolio" src="../imagenes/imagenesportafolio/Proyecto2.jpg" alt="imagen del proyecto 2"/>
-            <h3 class="subtitle">Proyecto 2</h3>
-            <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
+            <h2 class="subtitle">Proyecto 2</h2>
+            <h3 class="sub_subtitle golden_letter">Proximamente...</h3>
             <p class="description_proyect">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere corporis architecto, excepturi sapiente, iste ea animi adipisci quas unde ipsam consequuntur praesentium quisquam optio repellendus recusandae ratione explicabo ex maxime?</p>
           </article>
         <article class="article_portfolio">
           <img class="image_portfolio" src="../imagenes/imagenesportafolio/Proyecto3.jpg" alt="imagen del proyecto 3"/>
-          <h3 class="subtitle">Proyecto 3</h3>
-          <h4 class="sub_subtitle golden_letter">Subtitulo Proyecto</h4>
+          <h2 class="subtitle">Proyecto 3</h2>
+          <h3 class="sub_subtitle golden_letter">Proximamente...</h3>
           <p class="description_proyect">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere corporis architecto, excepturi sapiente, iste ea animi adipisci quas unde ipsam consequuntur praesentium quisquam optio repellendus recusandae ratione explicabo ex maxime?</p>
         </article>
       </section>
     </main>
     <footer>
-      <p class="copyright">&#169; 2024 Hernan Coceres</p>
-      <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      <img class="logo" src="../imagenes/imagenlogo/fav.png" alt="logo hernan coceres">
+      <div>
+        <p class="copyright">&#169; 2024 Hernan Coceres</p>
+        <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      </div>
+        <ul class="contact_index">
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="../imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
