--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
     </header>
     <!-- Comienza el inicio -->
     <main class="content_index">
-      <h1 class="name_index title_principal animate__animated animate__zoomInDown">Hernan Coceres</h1>
+      <h1 class="name_index title_principal animate__animated animate__zoomInDown">Hernán Cóceres</h1>
       <h2 class="subtitle subtitle_index golden_letter animate__animated animate__flipInX animate__delay-1s">Desarollador Frontend</h2>
       <section class="first_content--index animate__animated animate__fadeInUp animate__delay-2s">
       <div class="content_img--index"><img class="photo_index" src="./imagenes/imagenesindex/fotoretrato.jpg" alt="foto retrato de Hernan"/></div>
       <div class="content_p--index">
         <p class="paragraph_index">
-        Mi nombre es Hernan y actualmente me encuentro
-        descubriendo el mundo del desarrollo web. En este sitio podras encontrar
+        Mi nombre es Hernán y actualmente me encuentro
+        descubriendo el mundo del desarrollo web.<br>
+        En este sitio podras encontrar
         todo sobre mi y distintas formas para poder contactarme.
       </p>
       <section class="section_contact--index">
@@ -63,8 +64,17 @@
       </section>
     </section></div>
     <footer>
-      <p class="copyright">&#169; 2024 Hernan Coceres</p>
-      <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      <img class="logo" src="./imagenes/imagenlogo/fav.png" alt="logo hernan coceres">
+      <div>
+        <p class="copyright">&#169; 2024 Hernan Coceres</p>
+        <a target="_blank" href="https://icons8.com/icon/111057/x"></a> iconos de <a target="_blank" href="https://icons8.com">Icons8</a>
+      </div>
+        <ul class="contact_index">
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconolinkedin.png" alt="icono de linkedin"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconooutlook.png" alt="icono de outlook"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconox.png" alt="icono de x"></a></li>
+        <li class="item_contact--index"><a href="#"><img class="icon_social" src="./imagenes/imagenesindex/iconosindex/iconogit.png" alt="icono de github"></a></li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
